// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog should render 1`] = `
<div
  bsSize={undefined}
  className="Modal"
  show={true}
>
  <div
    className="Body"
  >
    <div>
      BODY
    </div>
  </div>
</div>
`;

exports[`Dialog should render action 1`] = `
<div
  bsSize={undefined}
  className="Modal"
  show={true}
>
  <div
    className="Header"
    closeButton={true}
  >
    <div>
      <h5
        className="modal-title"
      >
        Hello world
      </h5>
    </div>
  </div>
  <div
    className="Body"
  >
    <div>
      BODY
    </div>
  </div>
  <div
    className="Footer"
  >
    <div />
    <div />
    <div>
      <div
        className="tc-actions btn-group"
      >
        <button
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <span>
            OK
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog should render header 1`] = `
<div
  bsSize={undefined}
  className="Modal"
  show={true}
>
  <div
    className="Header"
    closeButton={true}
  >
    <div>
      <h5
        className="modal-title"
      >
        Hello world
      </h5>
    </div>
  </div>
  <div
    className="Body"
  >
    <div>
      BODY
    </div>
  </div>
</div>
`;

exports[`Dialog should render large 1`] = `
<div
  backdrop={false}
  bsSize="large"
  className="Modal"
  dialogClassName="customDialogClassName"
  keyboard={true}
  onHide={[Function]}
  show={true}
>
  <div
    className="Header"
    closeButton={true}
  >
    <div>
      <h5
        className="modal-title"
      >
        Hello world
      </h5>
    </div>
  </div>
  <div
    className="Body"
  >
    <div>
      BODY
    </div>
  </div>
  <div
    className="Footer"
  >
    <div />
    <div />
    <div>
      <div
        className="tc-actions btn-group"
      >
        <button
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <span>
            OK
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog should render small 1`] = `
<div
  backdrop={false}
  bsSize="small"
  className="Modal"
  dialogClassName="customDialogClassName"
  keyboard={true}
  onHide={[Function]}
  show={true}
>
  <div
    className="Header"
    closeButton={true}
  >
    <div>
      <h5
        className="modal-title"
      >
        Hello world
      </h5>
    </div>
  </div>
  <div
    className="Body"
  >
    <div>
      BODY
    </div>
  </div>
  <div
    className="Footer"
  >
    <div />
    <div />
    <div>
      <div
        className="tc-actions btn-group"
      >
        <button
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <span>
            OK
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
